style: format code without functional changes